<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:theme="@style/Theme.MaterialComponents">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_app"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/studentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_student"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_test"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewTestInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_test_information"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_student_info"
        android:layout_marginTop="16dp"/>

</LinearLayout>
