<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/letterGradeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="end"
        android:paddingBottom="8dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/testDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_date"
        android:textSize="16sp"
        android:textAppearance="?android:textAppearanceMedium"
        android:paddingBottom="8dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/testGradeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_grade"
        android:textSize="16sp"
        android:textAppearance="?android:textAppearanceMedium"
        android:paddingBottom="8dp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/testTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_type"
        android:textSize="16sp"
        android:textAppearance="?android:textAppearanceMedium"
        android:paddingBottom="8dp" />

</LinearLayout>
